Added some css styling
Imported Google fonts
Aligned text to the center
Moved logo to the top of the page
Resized logo & images

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img src="/img/logo.png" class="logo" alt="Logo">
     <h1>Contact us</h1>
-    <img src="/img/logo.png" alt="Logo">
     <ul>
         <li>Phone: (07) 3557 9280</li>
         <li>62 Vermont St, Aspley QLD 4034</li>
