--- a/photo.html
+++ b/photo.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patisserie selection</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img src="/img/logo.png" class="logo" alt="Logo">
     <h1>Croissant on Vermont</h1>
-    <img src="/img/logo.png" alt="Logo">
     <h3>All of our pastries are baked fresh daily in-store</h3>
     <h2>Croissants</h2>
-    <img src="/img/croissants.jpg" alt="Croissants">
+    <img src="/img/croissants.jpg" class="pastry-pic" alt="Croissants">
     <h2>Cronuts</h2>
-    <img src="/img/cronuts.jpg" alt="Cronuts">
+    <img src="/img/cronuts.jpg" class="pastry-pic" alt="Cronuts">
     <h2>Macarons</h2>
-    <img src="img/macarons.jpg" alt="Macarons">
+    <img src="img/macarons.jpg" class="pastry-pic" alt="Macarons">
     <h2>Petit Fours</h2>
-    <img src="/img/petit-fours.jpg" alt="Petit Fours">
+    <img src="/img/petit-fours.jpg" class="pastry-pic" alt="Petit Fours">
     <a href="/contact.html">Contact us</a>
     <a href="/">Return to homepage</a>
 </body>
