--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Croissant on Vermont</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img src="/img/logo.png" class="logo" alt="Logo">
     <h1>Croissant on Vermont</h1>
-    <img src="/img/logo.png" alt="Logo">
     <p>
         French patisserie located in Brisbane QLD. We serve the best croissants in Australia.
     </p>
