--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
     <img src="/img/logo.png" class="logo" alt="Logo">
@@ -17,7 +19,15 @@
         <li>62 Vermont St, Aspley QLD 4034</li>
         <li>Delivery available via Menulog & Deliveroo</li>
     </ul>
-    <a href="/photo.html">Browse our pastries</a>
-    <a href="/">Return to Homepage</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="/photo.html" class="page-link">Browse our pastries</a>
+            </div>
+            <div class="col-sm-6">
+                <a href="/" class="page-link">Return to homepage</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
