--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
     <img src="/img/logo.png" class="logo" alt="Logo">
@@ -15,7 +17,15 @@
     <p>
         French patisserie located in Brisbane QLD. We serve the best croissants in Australia.
     </p>
-    <a href="/photo.html">Browse our pastries</a>
-    <a href="/contact.html">Contact us</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="/photo.html" class="page-link">Browse our pastries</a>
+            </div>
+            <div class="col-sm-6">
+                <a href="/contact.html" class="page-link">Contact us</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
