--- a/photo.html
+++ b/photo.html
@@ -8,20 +8,51 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
     <img src="/img/logo.png" class="logo" alt="Logo">
     <h1>Croissant on Vermont</h1>
     <h3>All of our pastries are baked fresh daily in-store</h3>
-    <h2>Croissants</h2>
-    <img src="/img/croissants.jpg" class="pastry-pic" alt="Croissants">
-    <h2>Cronuts</h2>
-    <img src="/img/cronuts.jpg" class="pastry-pic" alt="Cronuts">
-    <h2>Macarons</h2>
-    <img src="img/macarons.jpg" class="pastry-pic" alt="Macarons">
-    <h2>Petit Fours</h2>
-    <img src="/img/petit-fours.jpg" class="pastry-pic" alt="Petit Fours">
-    <a href="/contact.html">Contact us</a>
-    <a href="/">Return to homepage</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <h2>Croissants</h2>
+                <img src="/img/croissants.jpg" class="pastry-pic" alt="Croissants">
+            </div>
+            <div class="col-lg-4">
+                <h2>Cronuts</h2>
+                <img src="/img/cronuts.jpg" class="pastry-pic" alt="Cronuts">
+            </div>
+            <div class="col-lg-4">
+                <h2>Macarons</h2>
+                <img src="img/macarons.jpg" class="pastry-pic" alt="Macarons">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <h2>Petit Fours</h2>
+                <img src="/img/petit-fours.jpg" class="pastry-pic" alt="Petit Fours">
+            </div>
+            <div class="col-lg-4">
+                <h2>Celebration Cakes</h2>
+                <img src="/img/celebration-cakes.jpg" class="pastry-pic" alt="Celebration cakes">
+            </div>
+            <div class="col-lg-4">
+                <h2>Baguettes</h2>
+                <img src="/img/baguettes.jpg" class="pastry-pic" alt="Baguettes">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="/contact.html" class="page-link">Contact us</a>
+            </div>
+            <div class="col-sm-6">
+                <a href="/" class="page-link">Return to homepage</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
