Added images to homepage
Applied Bootstrap border-radius styling to images

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>
         French patisserie located in Brisbane QLD. We serve the best croissants in Australia.
     </p>
+    <img src="/img/homepage-croissant.jpg" class="croissant rounded" alt="Croissant">
+    <img src="/img/gold-medal.png" class="gold-medal rounded-pill" alt="Gold medal winning croissants">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
