--- a/photo.html
+++ b/photo.html
@@ -19,30 +19,29 @@
         <div class="row">
             <div class="col-lg-4">
                 <h2>Croissants</h2>
-                <img src="/img/croissants.jpg" class="pastry-pic" alt="Croissants">
+                <img src="/img/croissants.jpg" class="pastry-pic rounded-circle" alt="Croissants">
             </div>
             <div class="col-lg-4">
                 <h2>Cronuts</h2>
-                <img src="/img/cronuts.jpg" class="pastry-pic" alt="Cronuts">
+                <img src="/img/cronuts.jpg" class="pastry-pic rounded-circle" alt="Cronuts">
             </div>
             <div class="col-lg-4">
                 <h2>Macarons</h2>
-                <img src="img/macarons.jpg" class="pastry-pic" alt="Macarons">
+                <img src="img/macarons.jpg" class="pastry-pic rounded-circle" alt="Macarons">
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4">
                 <h2>Petit Fours</h2>
-                <img src="/img/petit-fours.jpg" class="pastry-pic" alt="Petit Fours">
+                <img src="/img/petit-fours.jpg" class="pastry-pic rounded-circle" alt="Petit Fours">
             </div>
             <div class="col-lg-4">
                 <h2>Celebration Cakes</h2>
-                <img src="/img/celebration-cakes.jpg" class="pastry-pic" alt="Celebration cakes">
+                <img src="/img/celebration-cakes.jpg" class="pastry-pic rounded-circle" alt="Celebration cakes">
             </div>
             <div class="col-lg-4">
                 <h2>Baguettes</h2>
-                <img src="/img/baguettes.jpg" class="pastry-pic" alt="Baguettes">
-
+                <img src="/img/baguettes.jpg" class="pastry-pic rounded-circle" alt="Baguettes">
             </div>
         </div>
         <div class="row">
