Added Patisserie name to top of contact page
Changed h2 styling to include an underline

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <img src="/img/logo.png" class="logo" alt="Logo">
-    <h1>Contact us</h1>
+    <h1>Croissant on Vermont</h1>
+    <h2>Contact us</h2>
     <ul>
         <li>Phone: (07) 3557 9280</li>
         <li>62 Vermont St, Aspley QLD 4034</li>
