Updated pages for search engine optimisation
Expanded page titles
Added meta-descriptions
Added link titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant on Vermont</title>
+    <meta name="description" content="Croissant on Vermont is an award-winning Patisserie in Brisbane QLD. Enjoy a gold medal-winning croissant or choose from an extensive selection of French pastries, cakes, macarons and baguettes. Safe contact-free delivery available via Menulog and Deliveroo.">
+    <title>Croissant on Vermont - French Patisserie</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
@@ -18,14 +19,14 @@
         French patisserie located in Brisbane QLD. We serve the best croissants in Australia.
     </p>
     <img src="/img/homepage-croissant.jpg" class="croissant rounded" alt="Croissant">
-    <img src="/img/gold-medal.png" class="gold-medal rounded-pill" alt="Gold medal winning croissants">
+    <img src="/img/gold-medal.png" class="gold-medal rounded-pill" alt="Gold medal-winning croissants">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <a href="/photo.html" class="page-link">Browse our pastries</a>
+                <a href="/photo.html" title="See photos of patisserie items" class="page-link">Browse our patisserie selection</a>
             </div>
             <div class="col-sm-6">
-                <a href="/contact.html" class="page-link">Contact us</a>
+                <a href="/contact.html" title="Find out where to get your sweet fix"class="page-link">Contact us</a>
             </div>
         </div>
     </div>
