--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us</title>
+    <meta name="description" content="Croissant on Vermont is located in Aspley, Brisbane QLD Australia. Visit us for a coffee and a sweet treat. Home delivery available via Menulog and Deliveroo. Cakes made to order for special events and celebrations. French baking at it's finest.">
+    <title>Croissant on Vermont - Contact us</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
@@ -23,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <a href="/photo.html" class="page-link">Browse our pastries</a>
+                <a href="/photo.html" title="See photos of patisserie items" class="page-link">Browse our patisserie selection</a>
             </div>
             <div class="col-sm-6">
                 <a href="/" class="page-link">Return to homepage</a>
