--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patisserie selection</title>
+    <meta name="description" content="Croissant on Vermont offers a wide range of French pastries including our famous croissants. There are also cronuts, eclairs, macarons, crepes, creme brulee, chocolate mousse desserts, brioche buns, madeleine cakes and baguettes. Can't decide? Try our petit fours. Takeaway boxes available. Wedding and birthday cake orders accepted.">
+    <title>Croissant on Vermont - Patisserie selection</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sail&display=swap" rel="stylesheet">
@@ -46,7 +47,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <a href="/contact.html" class="page-link">Contact us</a>
+                <a href="/contact.html" title="Find out where and how to order" class="page-link">Contact us</a>
             </div>
             <div class="col-sm-6">
                 <a href="/" class="page-link">Return to homepage</a>
